// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PromoBadge /> snapshots renders with default props 1`] = `
<div
  className="mfui-promo-badge mfui-promo-badge_type_hit"
>
  <span
    className="mfui-promo-badge__text"
  >
    badge text
  </span>
</div>
`;

exports[`<PromoBadge /> snapshots renders with type prop 1`] = `
<div
  className="mfui-promo-badge mfui-promo-badge_type_popular"
>
  <span
    className="mfui-promo-badge__text"
  >
    badge text
  </span>
</div>
`;
